# booking-api

./: .env_example  .gitignore  README.md  fitness_studio.db  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  auth.py  booking.py  dependencies.py  fitness_class.py
app/core/: auth.py  celery_app.py  config.py  security.py  tasks.py
app/db/: base.py  models.py  session.py
app/db/crud/: __init__.py  booking.py  fitness_class.py  user.py
app/db/schemas/: __init__.py  fitness_class.py
app/models/: booking.py  fitness_class.py  user.py
app/repositories/: booking_repository.py  fitness_class_repository.py  user_repository.py
app/schemas/: booking.py  fitness_class.py  token.py  user.py
app/services/: __init__.py  booking_service.py  fitness_class_service.py  user_service.py
app/utils/: time.py
docs/source/: app.api.rst  app.api.v1.rst  app.core.rst  app.db.rst  app.models.rst  app.repositories.rst  app.rst  app.schemas.rst  app.services.rst  app.utils.rst  conf.py  index.rst
scripts/: seed.py
source/: services.rst
tests/: conftest.py
tests/integration/: test_booking_repository.py  test_fitness_class_repository.py  test_user_repository.py
tests/unit/: test_auth.py  test_booking_repository.py  test_security.py  test_user_repository.py
tests/unit/repositories/: test_fitness_class_repository.py
tests/unit/service/: test_booking_service.py  test_class_service.py  test_user_service.py
