[project]
name = "booking-api"
version = "0.1.0"
description = "Booking api for a fitness studio."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "pwdlib>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
